--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
     <h1>My first step in Distributed Version control System git</h1>
+    <p>Another modification</p>
 </body>
 </html>
